# ricedb-python

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  setup.sh
docs/: FEATURES_GUIDE.md
examples/: .env.example  accuracy_test.py  agent_memory_example.py  basic_usage.py  benchmark_latency.py  bulk_ingest_example.py  cortex_example.py  grpc_usage.py  http_usage.py  local_50k_insert.py  local_50k_query.py  metadata_filter_example.py  multi_agent_cortex_workflow.py  multi_agent_example.py  multi_user_acl.py  remote_50k_insert.py  remote_50k_insert_grpc.py  remote_50k_query.py  remote_bulk_ingest.py  remote_connect.py  remote_connect_http.py  test_embedding_service.py  test_fast_ingest.py  test_longmemeval.py  test_nested_overlays.py  test_performance.py  with_remote_embeddings.py  with_sentence_transformers.py
src/ricedb/: __init__.py  exceptions.py
src/ricedb/client/: __init__.py  base_client.py  grpc_client.py  http_client.py  unified_client.py
src/ricedb/protobuf/: __init__.py  ricedb_pb2.py  ricedb_pb2_grpc.py
src/ricedb/protobuf/proto/: ricedb_pb2.py  ricedb_pb2_grpc.py
src/ricedb/utils/: __init__.py  embeddings.py  sdm.py  validation.py
tests/: __init__.py  test_embeddings.py  test_exceptions.py  test_grpc_client.py  test_http_client.py  test_memory.py  test_sdm.py  test_unified_client.py  test_user_methods.py  test_validation.py
